--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
 asn1crypto==0.24.0
+astroid==2.3.3
+beautifulsoup4==4.8.2
 cffi==1.13.2
 confusable-homoglyphs==3.2.0
 cryptography==2.1.4
+dj-database-url==0.5.0
 Django==1.11.27
+django-bootstrap4==1.1.1
+django-crispy-forms==1.8.1
+django-heroku==0.3.1
 django-registration==2.4.1
 enum34==1.1.6
+et-xmlfile==1.0.1
 gunicorn==19.10.0
 idna==2.6
 ipaddress==1.0.17
+isort==4.3.21
+jdcal==1.4.1
 keyring==10.6.0
 keyrings.alt==3.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+openpyxl==3.0.3
 psutil==5.4.2
 psycopg2==2.8.4
 pycparser==2.19
+pylint==2.4.4
+python-decouple==3.3
 pytz==2019.3
 SecretStorage==2.3.1
-six==1.11.0
+six==1.14.0
+soupsieve==1.9.5
+typed-ast==1.4.1
+whitenoise==5.0.1
+wrapt==1.11.2
