--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asn1crypto==0.24.0
 astroid==2.3.3
 beautifulsoup4==4.8.2
+bootstrap-admin==0.4.3
 cffi==1.13.2
 confusable-homoglyphs==3.2.0
 cryptography==2.1.4
@@ -9,6 +10,7 @@ Django==1.11.27
 django-bootstrap4==1.1.1
 django-crispy-forms==1.8.1
 django-heroku==0.3.1
+django-log-viewer==1.0.6
 django-registration==2.4.1
 enum34==1.1.6
 et-xmlfile==1.0.1
